Update code and README

--- a/index.html
+++ b/index.html
@@ -1,28 +1,18 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-	<head>
-
-		<!-- Metas -->
-		<meta charset="utf-8">
-		<title>Nintendo Logo</title>
-
-		<!-- Styles CSS -->
-		<link rel="stylesheet" href="style.css">
-
-	</head>
-	<body>
-
-		<!-- Nintendo logo -->
-		<div id="box-logo">
-			<h1>Nintendo</h1>
-			<div id="reg">&reg;</div>
-		</div>
-
-		<!-- author -->
-		<p class="author">
-			Breno Polanski<br />
-			<a target="_blank" href="http://www.brenopolanski.tk" title="Breno Polanski">www.brenopolanski.tk</a>
-		</p>
-
-	</body>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Nintendo Logo</title>
+	<link rel="stylesheet" href="style.css">
+</head>
+<body>
+	<div id="box-logo">
+		<h1>Nintendo</h1>
+		<div id="reg">&reg;</div>
+	</div>
+	<p class="author">
+		Breno Polanski<br />
+		<a target="_blank" href="http://www.brenopolanski.com" title="Breno Polanski">www.brenopolanski.com</a>
+	</p>
+</body>
 </html>
